# ipa-python-template

./: .pre-commit-config.yaml  Justfile  README.md  main.py  pyproject.toml
