[project]
name = "dms-dashboard"
version = "0.1.0"
description = "IPA Data Management System Dashboard."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mdformat>=0.7.17",
    "mdformat-config>=0.1.3",
    "mdformat-frontmatter>=2.0.8",
    "mdformat-gfm>=0.3.6",
    "mdformat-pyproject>=0.0.1",
    "ruff>=0.6.4",
    "ipykernel>=6.29.5",
    "jupyterlab>=4.2.5",
    "sqlfluff>=3.1.1",
    "box-sdk-gen",
    "box-sdk-gen[jwt]",
]


[tool.ruff]
line-length = 88
fix = true
# Assume Python 3.11
target-version = "py311"

[tool.ruff.lint]
# docs: https://docs.astral.sh/ruff/rules/
select = [
    "F",   # Pyflakes
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "I",   # isort
    "D",   # flake8-docstrings
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]

ignore = [
    # do not enable if formatting
    # docs: https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",   # tab indentation
    "E111",   # indentation
    "E114",   # indentation
    "E117",   # over indented
    "D206",   # indent with spaces
    "D300",   # triple single quotes
    "E501",   # line length regulated by formatter
    "D105",   # missing docstring in magic method
    "D100",   # missing docstring in public module
    "D104",   # missing docstring in public package
    "SIM110", # Use all instead of `for` loop
    "TRY003", # Avoid specifying long messages outside the exception class
    "D205",   # 1 blank line required between summary line and description
    "D203",
    "D213",
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88

[tool.mdformat]
# docs: https://mdformat.readthedocs.io/en/stable/users/configuration_file.html
wrap = 88          # possible values: {"keep", "no", INTEGER}
number = false     # possible values: {false, true}
end_of_line = "lf" # possible values: {"lf", "crlf", "keep"}
